# MooD

./: .gitmodules  CMakeLists.txt  README.md
devlog/: 30-04-2024-05h46.md
include/: block.h  entity.h  player.h
src/: block.c  entity.c  mood.c  player.c
